Fixed z-index of right-buffer

--- a/main.css
+++ b/main.css
@@ -155,7 +155,7 @@ svg {
 .right-buffer {
     position: fixed;
     top: 60px;
-    z-index: 1;
+    z-index: 7;
     left: 100%;
     width: 100%;
     background-color: var(--light-color);
